# hydraulic-analysis-tool

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  HANDOVER.md  README.md  autonomous_dev_org.md  build-plan-v2.md  build-plan.md  build.bat  capture_3d_ui.py  dashboard.html  deep_diagnostic.md  epanet_api.py  epanet_api_monolith.py  hydraulic_tool.spec  main_app.py  pipe_stress.py  plot_brine.py  pyproject.toml  requirements.txt  requirements_desktop.txt  rest_api.py  run_diag_core.py  run_hydraulic_analysis.py  run_transient_analysis.py  scenario_manager.py  server.py  settings.json  setup.py  slurry_check.py  slurry_solver.py  temp.inp  temp.rpt  temp_surge.inp  validate_3d_enhancements.py
.claude/: launch.json  settings.local.json
app/: main.py  rest_api.py  theme.py
data/: __init__.py  asset_costs.py  au_pipes.py  demand_patterns.json  fluid_properties.py  pump_curves.py  terrain_sample.csv
desktop/: __init__.py  analysis_worker.py  animation_panel.py  asset_management_dialog.py  audit_trail.py  calibration_dashboard.py  calibration_data_dialog.py  calibration_dialog.py  calibration_residual_dialog.py  canvas_editor.py  colourmap_widget.py  compliance_dialog.py  crash_dialog.py  dashboard_widget.py  eps_dialog.py  fire_flow_dialog.py  gis_basemap.py  health_check.py  help_dialog.py  lcc_dialog.py  main_window.py  network_canvas.py  pattern_editor.py  pipe_profile_dialog.py  pipe_stress_panel.py  preferences.py  pressure_zone_dialog.py  probe_tooltip.py  profile_panel.py  pump_energy_dialog.py  pump_panel.py  quality_dialog.py  rehab_dialog.py  (+19 more)
(+378 files in other folders)
